--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,6 @@
     <title>contacto</title>
 </head>
 <body>
-    <h1> correo: alvz_allan@hotmail.com</h1>
+    <h1> el correo: alvz_allan@hotmail.com</h1>
 </body>
 </html>
