--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sistema de resgistro de juegos</title>
+    <title>sistema de resgistro de juegasos</title>
 </head>
 <body>
     <script src="app.js"></script>
